force-app/main/default/objects/CampaignMember/fields/Class_Year__c.field-meta.xml
<CustomField>
    <fullName>Class_Year__c</fullName>
    <formula>Contact.ucinn_ascendv2__Preferred_Class_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Year</label>
    <type>Text</type>
</CustomField>