force-app/main/default/objects/CampaignMember/fields/HAM_Household_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_Household_ID__c</fullName>
    <description>HH Account ID</description>
    <formula>Contact.AccountId</formula>
    <inlineHelpText>Household Account ID</inlineHelpText>
    <label>Household ID</label>
    <type>Text</type>
</CustomField>