force-app/main/default/objects/CampaignMember/fields/PRM__c.field-meta.xml
<CustomField>
    <fullName>PRM__c</fullName>
    <formula>Contact.ucinn_ascendv2__PRM_No_Trustee_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRM</label>
    <type>Text</type>
</CustomField>